# spoor

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  ImLogger.cpp  ImLogger.h  Makefile  README.md  cap_gstreamer.cpp  cap_gstreamer.h  cvplot.h  cvplot.hpp  feature.cpp  feature.h  franken.cpp  franken.h  low1.mkv  shoggoth.cpp  shoggoth.h  shoggoth.thrift  spoor.cpp  test.mkv  thrift.cpp  tracking.cpp  tracking.h  utility.h  vision.cpp  vision.h
cmake/: FindThrift.cmake
utils/: client1.sh  serve1.sh
utils/feat_test/: CMakeLists.txt  Makefile  feat_test.cpp  mog_test.cpp
utils/franken_stub/: CMakeLists.txt  franken.cpp  franken.h  franken_stub.cpp
utils/shoggoth_stub/: CMakeLists.txt  gen-cpp  shoggoth_stub.cpp
video/: relow1.mkv
